-- Habitat Map Evaluation Workflow Notebook --

--- a/Habitat-Map-Evaluation.ipynb
+++ b/Habitat-Map-Evaluation.ipynb
@@ -30,9 +30,7 @@
     "    * [6.5 Calculation of the Overall Richness Index and Spearman's Correlation Coefficient](#code65)\n",
     "    * [6.6 Pairwise Comparison Plots](#code66)\n",
     "    * [6.6 Overall Richness Index Comparison Plots](#code67)\n",
-    "8. [Tests](#tests)\n",
-    "9. [Provenance](#provenance)\n",
-    "10. [Citations](#citations)\n",
+    "\n",
     "---\n",
     "\n",
     "# Evaluating GAP Habitat Maps Using Presence-only Occurrence Data\n",
@@ -107,13 +105,7 @@
     "    - matplotlib (figures library) version 3.1.x or above\n",
     "    - RasterIO (geospatial raster dataset package) version 1.1 or above\n",
     "    - GDAL (geospatial data abstraction library) version 3.0 or above\n",
-    "    - LibTIFF (Tiff read/write library) version 4.1 or above\n",
-    "\n",
-    "\n",
-    "## Tests <a name=\"tests\"></a>\n",
-    "\n",
-    "\n",
-    "## Provenance <a name=\"provenance\"></a>"
+    "    - LibTIFF (Tiff read/write library) version 4.1 or above\n"
    ]
   },
   {
