-- Habitat Map Evaluation notebook --

--- a/Habitat-Map-Evaluation.ipynb
+++ b/Habitat-Map-Evaluation.ipynb
@@ -144,6 +144,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### This notebook will illustrate the evaluation workflow for a single species - Black-bellied Salamander *(Desmognathus quadramaculatus)* - to highlight individual components of the process. As such, the variables set are hard-coded just for the single species. Workflow for multiple species is available as a separate Python script. \n",
+    "---\n",
     "### Setup directory locations and species specific variables "
    ]
   },
@@ -156,7 +158,7 @@
     "# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "#            ++++ Directory Locations ++++\n",
     "#\n",
-    "# Macbook specific\n",
+    "# Mac specific\n",
     "#workDir = '/Users/matthewrubino/GAP-Habitat-Map-Assessment/'\n",
     "# Windows specific\n",
     "workDir = \"D:/USGS Analyses/GAP-Habitat-Map-Assessment/\"\n",
@@ -173,7 +175,8 @@
     "prophab = 0.040\n",
     "# Using the occurrence db naming convention, set a variable using\n",
     "# the species code in the designated db that was searched\n",
-    "# This is the 'species_id' in the species_concept table\n",
+    "# This is the 'species_id' in the species_concept table from the\n",
+    "# Wildlife-wrangler parameters database.\n",
     "species_id = 'abesax0'\n",
     "\n",
     "# Suitable habitat raster value\n",
@@ -201,8 +204,7 @@
     "# This TIF raster is a 0-1 species habitat map. It assumes that all habitat\n",
     "# cells in the raster are 1s and all non-habitat cells are 0s. If different\n",
     "# habitat TIFs are used, the code will need to be altered.\n",
-    "HabMap = sppDir + f'{sppcode}_CONUS_01A_2001v1.tif'\n",
-    "#HabMap = sppDir + '{0}_CONUS_HabMap_2001v1.tif'.format(sppcode)"
+    "HabMap = sppDir + f'{sppcode}_CONUS_01A_2001v1.tif'"
    ]
   },
   {
@@ -1066,33 +1068,6 @@
    "metadata": {},
    "source": [
     "### Discussion <a name=\"discussion\"></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    < 0.0001\n",
-       "1    < 0.0001\n",
-       "2    < 0.0001\n",
-       "3    < 0.0001\n",
-       "4    < 0.0001\n",
-       "5    < 0.0001\n",
-       "6    < 0.0001\n",
-       "Name: p-Value, dtype: object"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pvals"
    ]
   },
   {
