-- Habitat Map Evaluation example --

--- a/Habitat-Map-Evaluation.ipynb
+++ b/Habitat-Map-Evaluation.ipynb
@@ -1074,28 +1074,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Table 1**\n",
+    "**Buffer Proportion Assessment**\n",
     "\n",
-    "Tests for richness concordance between four vertebrate taxa in the conterminous United States based on total number of species attributed to 12-digit Hydrologic Units (HUCs) (n=82717). Kendall’s rank correlation coefficients $\\tau$ for pairwise comparisons among taxa and between each taxon and the overall richness index (calculated using Spearman’s $\\rho$).\n",
+    "The plot comparing the proportion of habitat throughout the species range (0.040) vs. the mean proportion of habitat with occurrence point buffers (0.229) indicates the model as better than random in predicting habitat adjacent to species locations. On average, the model predicts greater than 5 times more habitat adjacent to species locations than across the entire species' range.\n",
     "\n",
-    "| Taxon                  | Amphibians |  Birds | Mammals | Reptiles |\n",
-    "|------------------------|:----------:|:------:|:-------:|:--------:|\n",
-    "| Amphibians ($\\tau$)    |      1     |        |         |          |\n",
-    "| Birds ($\\tau$)         |   0.0139   |    1   |         |          |\n",
-    "| Mammals ($\\tau$)       |   -0.3114  | 0.2859 |    1    |          |\n",
-    "| Reptiles ($\\tau$)      |   0.4582   | 0.1022 | -0.1316 |     1    |\n",
-    "| Overall Index ($\\rho$) |   0.3248   | 0.2903 | -0.1329 |  0.4192  |\n",
+    "If the GAP model predicts that 4% of the black-bellied salamander range is suitable habitat, then a finite number of cells in the range could be considered habitat pixels. If these cells were distributed randomly across the range, the probability of any given cell being identified as habitat would be 0.04. Likewise, if we used point buffers to clip the random habitat landscape, the percentage of habitat cells in those buffers would be very close or equal to 4%. Assume that occurrence point locations are indicative of suitable habitat for the species. If a cell predicted by the model as habitat falls within the occurrence point buffer, because the number of habitat cells is finite, that means a “non-habitat” cell outside the buffer was correctly **not** identified as habitat. The higher the proportion of cells identified as habitat within occurrence point buffers, the better the model was at identifying areas of the range not considered habitat. The model is identifying parts of the range where there are occurrences and by extension, habitat.\n",
     "\n",
     "\n",
-    "---\n",
-    "Most comparisons reveal little in the way of overlap between taxa richness at the HUC scale, with four of the six pairwise comparisons having correlation coefficients below ±0.3. Modest relationships exist between mammals and amphibians and between reptiles and amphibians ($\\tau$ = -0.3114 and 0.4582 respectively). Overall, reptiles exhibit the strongest measure of overlap in richness between all other groups ($\\rho$ = 0.4192).\n",
+    "**Buffer Sensitivity Metric**\n",
     "\n",
+    "Sensitivity (true positive fraction) of point locations at all but one buffer distance (100m - 0.489) is greater than 0.5. P-values of exact one-sided binomial tests for each buffer distance category indicates sensitivity values are all highly significant.\n",
     "\n",
-    "**Comparisons with other similar studies**\n",
-    "\n",
-    "Correlations between taxon richness and overall richness (measured by Spearman's $\\rho$ coefficient) are remarkably similar to values reported by Hess et al. (2006) at their smallest grain of analysis (315,000 km<sup>2</sup> hexagons) for the Mid-Atlantic region of the US. They reported amphibians and reptiles as having the highest measure of concordance with all other taxa ($\\rho$ = 0.47 and 0.33 respectively) and likewise identified mammals as exhibiting a negative relationship with overall taxa richness ($\\rho$ = -0.12). However, Hess et al. (2006) did not observe similar relationships for those taxa in their Pacific Northwest region of analysis (states of Oregon and Washington). It may be possible that the more biodiverse eastern US could drive patterns of species richness throughout CONUS, particularly as it relates to amphibians and reptiles (see McKerrow et al. 2018 for a discussion of species richness hotspots in the US).\n",
-    "\n",
-    "Similarly, Ricketts et al. (1999) found amphibians and reptiles to have the highest measures of richness concordance with all other taxa, albeit at much higher levels across all groups. Their analyses were conducted across the entiretly of northern North America (CONUS and Canada) and for 9 species groups including invertebrates and vascular plants. The grain of the Ricketts et al. (1999) study was terrestrial ecoregions developed by the World Wildlife Fund. Theses ecoregions vary widely in both size and extent. Although Ricketts et al. (1999) conclude that any the taxa they tested could be effective indicators of overall species richness, they caution such an assessment may only be reliable at coarse scales. The analyses conducted in this notebook are at a much finer grain than ecoregions (or Hess et al.'s hexagons) and suggest that richness patterns across taxa groups are not a nested phenomenon.\n"
+    "Expectedly, as the buffer distance increases, sensitivity increases. In practical model use, sensitivity should be relatively high (> 0.7) because it is inversely related to omission rate (**not** predicting a species to occur when it was in fact observed at that location). In this example for the black-bellied salamander, model sensitivity approaches 0.7 somewhere between 1000 and 2000 meters indicating this model is most likely best suited to analyses where scales exceed 1000 meters.\n"
    ]
   },
   {
